<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registr">


    <ImageView
        android:layout_width="78dp"
        android:layout_height="70dp"
        android:src="@drawable/logosbera"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:text="@string/had_reg"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="380dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/input_login"
            android:layout_width="282dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="117dp"
            android:hint="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="282dp"
            android:layout_height="40dp"
            android:layout_marginLeft="-282dp"
            android:layout_marginTop="200dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="293dp"
            android:layout_height="35dp"
            android:layout_marginLeft="-262dp"
            android:layout_marginTop="49dp"
            android:text="@string/input_loginpass"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/butonns"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="-320dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/mybutton"
            android:text="@string/sign_text"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
